--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.53
+@version        1.0.54
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -55,6 +55,7 @@ input,
 }
 
 hr,
+a[title='Log out'],
 #coordinates,
 #mw-indicator-mw-helplink, /* Help link on diff */
 #mw-indicator-0-coord,
@@ -955,6 +956,31 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	/* "By clicking "Create", you agree to the terms of use, and you irrevocably agree to release your contribution under the Creative Commons CC0 License. */
 	#mw-content-text > div:nth-child(2) {
 		display: none;
+	}
+}
+
+@-moz-document url-prefix("https://commons.wikimedia.org/w/index.php?title=Special%3AUploadWizard") {
+	h1,
+	#contentSub,
+	#mwe-upwiz-steps,
+	.mwe-upwiz-deed-license-group .mwe-upwiz-deed-license-group-subhead.mwe-upwiz-deed-title,
+	#ooui-27, /* "Description" label */
+	.mwe-upwiz-details-help
+	{
+		display: none;
+	}
+
+	#mwe-upwiz-deeds-thumbnails,
+	.mwe-upwiz-source-multiple
+	{
+		margin: 0;
+	}
+
+	/* Separator lines */
+	.mwe-upwiz-source-multiple,
+	.mwe-upwiz-deed-forms .mwe-upwiz-deed-thirdparty
+	{
+		border: none;
 	}
 }
 
