--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.76
+@version        1.0.77
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -330,7 +330,10 @@ table.wikitable > tr > th, table.wikitable > * > tr > td, /* https://ru.wikipedi
 #mw_metadata, /* Bottom of the page https://commons.wikimedia.org/wiki/File:Монета_5_лет_Независимости_50_литов_back.jpg */
 .mbox-text, /* Top https://commons.wikimedia.org/wiki/Category:PD-LT-exempt_(coins) */
 .licensetpl,
-.messagebox.layouttemplate, /* https://commons.wikimedia.org/wiki/File:Iranian_Fire_God_Adur_(Atar)_on_a_coin_of_Tegin_Shah,_728_CE.jpg /*
+.messagebox.layouttemplate, /* https://commons.wikimedia.org/wiki/File:Iranian_Fire_God_Adur_(Atar)_on_a_coin_of_Tegin_Shah,_728_CE.jpg */
+.mergedtoprow td, /* https://en.wikipedia.org/wiki/Vilnius */
+.infobox-label,
+.infobox-data,
 [style='max-width:800px;padding-top:10px;'] [style='position:relative;min-height:320px;min-width:800px;max-width:800px;'], /* Graph at https://ru.wikipedia.org/wiki/Ханты-Мансийский_автономный_округ_—_Югра#Население */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
