--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.85
+@version        1.0.86
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -339,6 +339,7 @@ table.wikitable > tr > th, table.wikitable > * > tr > td, /* https://ru.wikipedi
 .mw-headline a span /* https://meta.wikimedia.org/wiki/Software_Collaboration_for_Wikidata/Open_Call */,
 .vgr-title, /* Table at the right with marks, title "Reception" https://en.wikipedia.org/wiki/Project_Snowblind */
 .diff, /* https://ru.wikipedia.org/w/index.php?title=Радио-Т&diff=next&oldid=136646509 */
+tr.bright + *,
 [style='max-width:800px;padding-top:10px;'] [style='position:relative;min-height:320px;min-width:800px;max-width:800px;'], /* Graph at https://ru.wikipedia.org/wiki/Ханты-Мансийский_автономный_округ_—_Югра#Население */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
@@ -640,6 +641,9 @@ span[style='background:yellow'] /* https://en.wikipedia.org/wiki/Wikipedia:Tools
 .oo-ui-tabSelectWidget-framed .oo-ui-tabOptionWidget.oo-ui-optionWidget-selected, /* Preferences: panel with subpages like "User profile", "Appearance", "Editing"... */
 .excerpt, /* Excerpt from more detailed article https://en.wikipedia.org/wiki/Kyrgyzstan#Glaciers_and_climate_change */
 .wikitable tr:not(td), /* https://ru.wikipedia.org/wiki/Памятные_монеты_Литвы#Статистика */
+tr.bright,
+[style='position:absolute;top:162.75px;left:100px;width:145px;'], /* Население at https://ru.wikipedia.org/wiki/Тыпкысыр */
+[style='position:absolute;height:162.75px;min-width:100px;max-width:100px;top:0px;left:0px;'], /* Население at https://ru.wikipedia.org/wiki/Тыпкысыр */
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
 	color: wheat !important;
@@ -679,7 +683,7 @@ ul li, /* For example this list https://ru.wikipedia.org/wiki/Рудня_(Чер
 ol li, /* Wikipedia: sources list */
 aside a, 
 aside p, /* related articles: titles & second line with desc*/
-.infobox span,
+.infobox span:not([data-wikidata-property-id="P625"]), /* map */
 [style='width:50%; border:1px solid #cef2e0; padding:0; background-color: #ffffff; vertical-align:top; color:#000;'] /* https://be.wikipedia.org/wiki/Галоўная_старонка: article of the day: text around link was black on black */
 {
 	color: lightgray !important;
