--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.86
+@version        1.0.87
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -340,6 +340,7 @@ table.wikitable > tr > th, table.wikitable > * > tr > td, /* https://ru.wikipedi
 .vgr-title, /* Table at the right with marks, title "Reception" https://en.wikipedia.org/wiki/Project_Snowblind */
 .diff, /* https://ru.wikipedia.org/w/index.php?title=Радио-Т&diff=next&oldid=136646509 */
 tr.bright + *,
+.wikibase-entitytermsview-entitytermsforlanguagelistview, /* Wikidata: top block with labels */
 [style='max-width:800px;padding-top:10px;'] [style='position:relative;min-height:320px;min-width:800px;max-width:800px;'], /* Graph at https://ru.wikipedia.org/wiki/Ханты-Мансийский_автономный_округ_—_Югра#Население */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
@@ -369,7 +370,9 @@ kbd[style*='background:#EEEEEE'],
 #mwe-upwiz-step-thanks {
 	background: #000
 }
-#mwe-upwiz-steps li.head { /* Commons: uploading: highlight current step */
+#mwe-upwiz-steps li.head,
+.wb-empty /* Wikidata: top block with labels: "No label defined", "No description defined" */
+{ /* Commons: uploading: highlight current step */
 	color: green !important;
 }
 
