--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.91
+@version        1.0.92
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -121,6 +121,7 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 .mw-heading, /* Talk page - line between comment title and comment body */
 .sdms-page-result, /* Commons SERP */
 .filled + .filled, /* Commons: uploading: separation between files */
+.mw-parser-output .wpvg-sidebar-header-cont, /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 .oo-ui-panelLayout-framed /* Preferences */
 {
     border: 0 !important;
@@ -344,6 +345,14 @@ table.wikitable > tr > th, table.wikitable > * > tr > td, /* https://ru.wikipedi
 tr.bright + *,
 .wikibase-entitytermsview-entitytermsforlanguagelistview, /* Wikidata: top block with labels */
 .searchdidyoumean, /* Commons search: "Did you mean" */
+.mw-selflink, /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='background: #F9F9F9; border-width:1px; border-color: #ababab; padding: 0px; width: 100%;'] .mw-collapsible.mw-made-collapsible th[colspan='2'], /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='width: 50%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='max-width: 40%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='width: 100%; vertical-align:top;border: 1px solid #aaa; background-color:white;'] th, /* Text "Related WikiProjects and task forces" https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='text-align: left; border-spacing: 0; border: 1px solid silver; margin-bottom: 1em; background: transparent; font-size: 85%;'] [role='heading'],
+[style='width: 100%; border-spacing: 10px; background:none;'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+[style='width: 100%; background:none; border-spacing: 16px'] td,
 [style='max-width:800px;padding-top:10px;'] [style='position:relative;min-height:320px;min-width:800px;max-width:800px;'], /* Graph at https://ru.wikipedia.org/wiki/Ханты-Мансийский_автономный_округ_—_Югра#Население */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
@@ -651,6 +660,9 @@ span[style='background:yellow'] /* https://en.wikipedia.org/wiki/Wikipedia:Tools
 tr.bright,
 [style='position:absolute;top:162.75px;left:100px;width:145px;'], /* Население at https://ru.wikipedia.org/wiki/Тыпкысыр */
 [style='position:absolute;height:162.75px;min-width:100px;max-width:100px;top:0px;left:0px;'], /* Население at https://ru.wikipedia.org/wiki/Тыпкысыр */
+td[width='50%'] [style='margin-left: 1.6em; font-style: italic;'], /* Text "No major discussions" https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+td[width='50%'] .hlist [style='font-style: italic;'], /* Text "No did you know nominations" https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
+
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
 	color: wheat !important;
