--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.93
+@version        1.0.94
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -663,7 +663,7 @@ tr.bright,
 [style='position:absolute;height:162.75px;min-width:100px;max-width:100px;top:0px;left:0px;'], /* Население at https://ru.wikipedia.org/wiki/Тыпкысыр */
 td[width='50%'] [style='margin-left: 1.6em; font-style: italic;'], /* Text "No major discussions" https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 td[width='50%'] .hlist [style='font-style: italic;'], /* Text "No did you know nominations" https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
-
+h3[data-mw-thread-id] + table.wikitable th, /* https://ru.wikipedia.org/wiki/Википедия%3AЧто_делать%2C_если_Википедия_заблокирована#Сравнительная_таблица_вариантов */
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
 	color: wheat !important;
